updated readme, added files